# LK-Projects

./: README.md
vagas-bot/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  exemplo.env  pyproject.toml
vagas-bot/app/: main.py  worker.py
vagas-bot/app/browser/: camoufox.py  pool.py  selectors.py
vagas-bot/app/browser/flows/: apply.py  parse_job.py  search.py
vagas-bot/app/core/: api.py  config.py  crypto.py  db.py  email_text.py  logging.py  pending_cv_upload.py  pending_email.py  pending_question.py  redis.py  smtp_send.py  telegram.py
vagas-bot/app/core/llm/: client.py  models.py
vagas-bot/app/core/rag/: chunker.py  embeddings.py
vagas-bot/app/features/admin/: handlers.py  service.py
vagas-bot/app/features/agente/: email_dispatch.py  email_handlers.py  graph.py  handlers.py  long_term_memory.py  photo_handler.py  prompts.py  reset_handler.py  tools.py
vagas-bot/app/features/cv/: handlers.py  (+3 more)
vagas-bot/app/tools/: gupy_login.py
vagas-bot/eval/: run_matching_eval.py
vagas-bot/eval/datasets/: matching_golden.jsonl
vagas-bot/migrations/: env.py
vagas-bot/migrations/versions/: 3892e6d96392_phase4_match_result.py  3ad43019cff2_phase3_filtros_and_vagas.py  a1f3c7e2b801_cv_translation.py  b126b730e399_phase5_candidatura.py  c4d7e9f01a23_email_submission.py  cc1d4ca768c4_init.py  d8f1a3b29c10_filtro_vaga_ats.py  f75fc495084e_phase2_sessao_gupy_and_cv.py
vagas-bot/tests/: conftest.py
vagas-bot/tests/core/: test_config.py  test_crypto.py  test_email_text.py  test_healthz.py  test_logging.py  test_telegram_auth.py
(+142 files in other folders)
