[project]
name = "vagas-bot"
version = "0.1.0"
description = "Telegram bot que automatiza descoberta e candidatura a vagas no Gupy"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-telegram-bot[ext]>=21.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "arq>=0.26",
    "redis>=5.2",
    "cryptography>=43",
    "httpx>=0.27",
    "pymupdf>=1.24",
    "openai>=1.55",
    "pgvector>=0.3.6",
    "camoufox[geoip]>=0.4.11",
    "tenacity>=9.0",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langgraph-checkpoint-postgres>=2.0",
    "psycopg[binary]>=3.2",
    "weasyprint>=62",
    "markdown>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "ruff>=0.7",
    "asgi-lifespan>=2.1",
    "aiosqlite>=0.20",
    "ragas>=0.2",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"migrations/env.py" = ["F401"]
"migrations/versions/*.py" = ["E501"]
